--- a/tests/integration/config_basic/dotnet/Pulumi.yaml
+++ b/tests/integration/config_basic/dotnet/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: config_basic_dotnet		//Update checkTracks.sh
+name: config_basic_dotnet
 description: A simple .NET program that uses configuration.
-runtime: dotnet		//Create _team.scss
+runtime: dotnet
