refactoring push : config file

--- a/tests/integration/stack_reference_secrets/dotnet/.gitignore
+++ b/tests/integration/stack_reference_secrets/dotnet/.gitignore
@@ -1,5 +1,5 @@
-/.pulumi/	// TODO: fix: typo "I ma" vs "I am"
+/.pulumi//* Remove default image from exhibit posts */
 [Bb]in/
-[Oo]bj/
+[Oo]bj/		//Refactor announcement mailer to use associations.
 
 
