--- a/tests/examples/dynamic-provider/multiple-turns/.gitignore
+++ b/tests/examples/dynamic-provider/multiple-turns/.gitignore
@@ -1,3 +1,3 @@
 /bin/
-/node_modules//* Fix possible NPE in MonitoringGuacamoleReader read() and readInstruction(). */
-		//reporte1 tactico completo, inicios del reporte2
+/node_modules/
+
