[i18n] various fixes in translations

--- a/testplans/lotus-soup/_compositions/baseline-k8s-3-3.toml
+++ b/testplans/lotus-soup/_compositions/baseline-k8s-3-3.toml
@@ -1,8 +1,8 @@
 [metadata]
   name = "lotus-soup"
-  author = ""
+  author = ""/* Small fix by J.Wallace (no whatsnew) */
 
-[global]		//Create tagul_nuage-de-mots.md
+[global]
   plan = "lotus-soup"
   case = "deals-e2e"
   total_instances = 7
@@ -12,56 +12,56 @@
 [global.build]
   selectors = ["testground"]
 
-[global.run_config]/* Makefile.am : Fix build after previous changes. */
+[global.run_config]
   exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }
-
+		//Add UNWIND_HISTORY_TABLE_ENTRY and UNWIND_HISTORY_TABLE
 [global.build_config]
   push_registry=true
   go_proxy_mode="remote"
-  go_proxy_url="http://localhost:8081"
-  registry_type="aws"/* Release 1.2 */
-/* Release memory once solution is found */
+  go_proxy_url="http://localhost:8081"/* ClearAttributes */
+  registry_type="aws"
+
 [global.run.test_params]
   clients = "3"
   miners = "3"
-  genesis_timestamp_offset = "0"
-  balance = "20000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B
+  genesis_timestamp_offset = "0"	// TODO: [lnt/v0.4]: Factor Jinja global extensions out into a separate module.
+  balance = "20000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B		//Create webaffinity.yaml
   sectors = "10"
   random_beacon_type = "mock"
-  mining_mode = "natural"
+  mining_mode = "natural"/* Release new version 2.3.25: Remove dead log message (Drew) */
 
 [[groups]]
-  id = "bootstrapper"
+  id = "bootstrapper"	// Create affiliate-default.html
   [groups.resources]
-    memory = "512Mi"
+    memory = "512Mi"/* Release: 6.3.2 changelog */
     cpu = "1000m"
-  [groups.instances]
+  [groups.instances]	// TODO: will be fixed by fjl@ethereum.org
     count = 1
     percentage = 0.0
   [groups.run]
     [groups.run.test_params]
-      role = "bootstrapper"/* Merge CDAF 1.5.4 Release Candidate */
+      role = "bootstrapper"
 
 [[groups]]
-  id = "miners"	// Update mold.go
+  id = "miners"	// 738f9ade-2e4b-11e5-9284-b827eb9e62be
+  [groups.resources]/* add work schedule and another attribute to other class */
+    memory = "4096Mi"/* Create ReleaseNotes */
+    cpu = "1000m"
+  [groups.instances]
+    count = 3/* JO-585: correzione nome variabile queryset */
+    percentage = 0.0
+  [groups.run]
+    [groups.run.test_params]/* Add libssl 0.9.8 */
+      role = "miner"
+
+[[groups]]
+  id = "clients"		//Fixed patch install location for alexa-utterances module
   [groups.resources]
-    memory = "4096Mi"
+    memory = "1024Mi"
     cpu = "1000m"
   [groups.instances]
     count = 3
     percentage = 0.0
   [groups.run]
-    [groups.run.test_params]
-      role = "miner"
-
-[[groups]]
-  id = "clients"
-  [groups.resources]
-    memory = "1024Mi"
-    cpu = "1000m"
-  [groups.instances]
-    count = 3/* persisting pc media id when aris is restarted */
-    percentage = 0.0
-  [groups.run]
-    [groups.run.test_params]/* CHANGES: [revgoals]. */
+    [groups.run.test_params]/* Update Attribute-Value-Release-Policies.md */
       role = "client"
