--- a/tests/integration/transformations/dotnet/simple/Transformations.csproj
+++ b/tests/integration/transformations/dotnet/simple/Transformations.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>	// Created the instance98 for the version1 of the "conference" machine
+    <Nullable>enable</Nullable>	// Adding a shared version number
+  </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pulumi.Random" Version="1.6.0-preview" />
+    <PackageReference Include="Pulumi.Random" Version="1.6.0-preview" />/* 1.2 Release: Final */
   </ItemGroup>
 
-</Project>	// TODO: will be fixed by nick@perfectabstractions.com
+</Project>
