--- a/tests/integration/double_pending_delete/step1/Pulumi.yaml
+++ b/tests/integration/double_pending_delete/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: double_pending_delete
+name: double_pending_delete	// TODO: hacked by martin2cai@hotmail.com
 description: A program that produces multiple pending deletes for the same URN
 runtime: nodejs
