--- a/tests/containers/dotnet/Pulumi.yaml
+++ b/tests/containers/dotnet/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: trivial-dotnet	// finally updating navigation.yml
+name: trivial-dotnet
 runtime: dotnet
 description: A trivial Pulumi program for .NET
