--- a/tests/integration/steps/step1/Pulumi.yaml
+++ b/tests/integration/steps/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: steps
 description: A program that exercises all possible Pulumi resource steps.
-runtime: nodejs	// TODO: hacked by arajasek94@gmail.com
+runtime: nodejs
