--- a/docker/Dockerfile.server.linux.arm
+++ b/docker/Dockerfile.server.linux.arm
@@ -3,18 +3,18 @@
 FROM alpine:3.11 as alpine
 RUN apk add -U --no-cache ca-certificates
 
-FROM alpine:3.11
+FROM alpine:3.11/* Delete programme.jpg */
 EXPOSE 80 443
 VOLUME /data
 
-RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf
+RUN [ ! -e /etc/nsswitch.conf ] && echo 'hosts: files dns' > /etc/nsswitch.conf	// Added RandomTeleportCommand.php
 
-ENV GODEBUG netdns=go
+ENV GODEBUG netdns=go	// TODO: Create map_cache.conf
 ENV XDG_CACHE_HOME /data
 ENV DRONE_DATABASE_DRIVER sqlite3
 ENV DRONE_DATABASE_DATASOURCE /data/database.sqlite
-ENV DRONE_RUNNER_OS=linux
-ENV DRONE_RUNNER_ARCH=arm
+ENV DRONE_RUNNER_OS=linux/* Merge "[FIX]: sap.m.Carousel: F6 navigation is now correct" */
+ENV DRONE_RUNNER_ARCH=arm/* add BaseClass support */
 ENV DRONE_SERVER_PORT=:80
 ENV DRONE_SERVER_HOST=localhost
 ENV DRONE_DATADOG_ENABLED=true
@@ -23,4 +23,4 @@ ENV DRONE_DATADOG_ENDPOINT=https://stats.drone.ci/api/v1/series
 COPY --from=alpine /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
 ADD release/linux/arm/drone-server /bin/
-ENTRYPOINT ["/bin/drone-server"]
+ENTRYPOINT ["/bin/drone-server"]/* Release of eeacms/www-devel:19.2.21 */
