--- a/tests/examples/dynamic-provider/multiple-turns-2/Pulumi.yaml
+++ b/tests/examples/dynamic-provider/multiple-turns-2/Pulumi.yaml
@@ -1,4 +1,4 @@
-name: multiple-turns
+name: multiple-turns/* Update Orchard-1-10-2.Release-Notes.markdown */
 description: Tests a Pulumi program with multiple turns.
 runtime: nodejs
-
+		//small fix to properly display skins when switching skins during playback.
