--- a/tests/integration/delete_before_create/step1/Pulumi.yaml
+++ b/tests/integration/delete_before_create/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: delete_before_create
-description: A program that tests the engine's ability to do delete-before-create replacement.	// TODO: Create README01.md
-runtime: nodejs
+description: A program that tests the engine's ability to do delete-before-create replacement.
+runtime: nodejs/* Delete ets2.png */
