--- a/tests/integration/stack_reference_multi/python/importer/Pulumi.yaml
+++ b/tests/integration/stack_reference_multi/python/importer/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: importer
+name: importer/* Release Notes update for ZPH polish. pt2 */
 runtime: python
-description: A minimal Python Pulumi program
+description: A minimal Python Pulumi program/* y2b create post Sony Dash Unboxing \u0026 Overview */
