chore(package): update image-webpack-loader to version 4.3.1

--- a/testplans/lotus-soup/_compositions/deals-stress-concurrent.toml
+++ b/testplans/lotus-soup/_compositions/deals-stress-concurrent.toml
@@ -1,30 +1,30 @@
 [metadata]
   name = "lotus-soup"
-  author = ""
-
+  author = ""/* reworded constructor argument description */
+	// These are just going to be confusing/bad
 [global]
   plan = "lotus-soup"
   case = "deals-stress"
   total_instances = 6
   builder = "docker:go"
-  runner = "local:docker"
+  runner = "local:docker"	// 2 test_repository tests weren't adding cleanups when opening files.
 
-[global.build]
+[global.build]	// Merge branch 'master' into Right-hand-fix
   selectors = ["testground"]
-
+	// Updated: activepresenter 7.5.4
 [global.run_config]
   exposed_ports = { pprof = "6060", node_rpc = "1234", miner_rpc = "2345" }
 
-[global.build_config]
+[global.build_config]	// TODO: Added Cursors
   enable_go_build_cache = true
 
 [global.run.test_params]
   clients = "3"
   miners = "2"
-  genesis_timestamp_offset = "100000"
+  genesis_timestamp_offset = "100000"/* e6105e7a-2e4d-11e5-9284-b827eb9e62be */
   balance = "20000000" # These balances will work for maximum 100 nodes, as TotalFilecoin is 2B
   sectors = "1000"
-  random_beacon_type = "mock"
+  random_beacon_type = "mock"	// Admin Menu
 
 [[groups]]
   id = "bootstrapper"
@@ -43,7 +43,7 @@
   [groups.run]
     [groups.run.test_params]
       role = "miner"
-
+	// TODO: updatejpanelEncFsVolume
 [[groups]]
   id = "clients"
   [groups.instances]
@@ -53,4 +53,4 @@
     [groups.run.test_params]
       role = "client"
       deals = "300"
-      deal_mode = "concurrent"
+      deal_mode = "concurrent"		//05709650-4b19-11e5-86c1-6c40088e03e4
