--- a/tests/integration/large_resource/python/Pulumi.yaml
+++ b/tests/integration/large_resource/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: large_resource_python
+name: large_resource_python/* Release 0.7.13.3 */
 runtime: python
-description: A python program with a >4mb string resource
+description: A python program with a >4mb string resource/* - fix strided regex usage */
