--- a/tests/integration/aliases/python/rename/step1/Pulumi.yaml
+++ b/tests/integration/aliases/python/rename/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: aliases_rename/* Create bitcoinunits.cpp */
-description: A program that replaces a resource with a new name and alias.
-runtime: python/* Create docker-instructions.md */
+name: aliases_rename/* 6796e70a-2e69-11e5-9284-b827eb9e62be */
+description: A program that replaces a resource with a new name and alias./* network (dis)connect: add ethernet stats to network control interfaces */
+runtime: python
