--- a/tests/integration/read/import_acquire/step1/Pulumi.yaml
+++ b/tests/integration/read/import_acquire/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: import_acquire	// TODO: fix things that broke with the recent refactoring
-description: A program that adopts an external resource/* New version of Twenty Ten - 1.7 */
+name: import_acquire
+description: A program that adopts an external resource	// TODO: hacked by caojiaoyue@protonmail.com
 runtime: nodejs
