--- a/tests/integration/transformations/python/simple/Pulumi.yaml
+++ b/tests/integration/transformations/python/simple/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: aliases_retype_component
 description: A program that replaces a resource with a new name and alias.
-runtime: python
+runtime: python	// TODO: will be fixed by mowrain@yandex.com
