--- a/tests/integration/construct_component/python/Pulumi.yaml
+++ b/tests/integration/construct_component/python/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: construct_component_py
+name: construct_component_py		//Merge "Implement docker backend for magnum service"
 description: A program that constructs remote component resources.
-runtime: python	// TODO: hacked by davidad@alum.mit.edu
+runtime: python
