--- a/tests/integration/stack_reference/python/Pulumi.yaml
+++ b/tests/integration/stack_reference/python/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: stack_reference_py
-description: A simple Python program that has a stack reference.
+description: A simple Python program that has a stack reference./* 4.6.0 Release */
 runtime: python
