--- a/tests/integration/stack_outputs/dotnet/Pulumi.yaml
+++ b/tests/integration/stack_outputs/dotnet/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: stack_outputs
+name: stack_outputs/* Add MongoDB World */
 description: A program that exports some outputs from .NET.
 runtime: dotnet
