Logging formula now called logstash

--- a/tests/containers/dotnet/Infra.fsproj
+++ b/tests/containers/dotnet/Infra.fsproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
+  <PropertyGroup>/* removed binding to ResourceValidation in context of embedded editor */
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Nullable>enable</Nullable>
