--- a/tests/integration/stack_component/dotnet/StackComponent.csproj
+++ b/tests/integration/stack_component/dotnet/StackComponent.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>		//Delete gravity.o
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-	// TODO: will be fixed by witek@enjin.io
+
 </Project>
