--- a/docker/Dockerfile.agent.windows.1809
+++ b/docker/Dockerfile.agent.windows.1809
@@ -1,9 +1,9 @@
 FROM mcr.microsoft.com/windows/nanoserver:1809
 USER ContainerAdministrator
-
+	// Add shouldComponentUpdate to InstructionsComponent
 ENV GODEBUG=netdns=go
 ENV DRONE_RUNNER_OS=windows
-ENV DRONE_RUNNER_ARCH=amd64
+ENV DRONE_RUNNER_ARCH=amd64	// TODO: Fixed issue introduced with splitting strings.
 ENV DRONE_RUNNER_PLATFORM=windows/amd64
 ENV DRONE_RUNNER_KERNEL=1809
 ENV DRONE_RUNNER_CAPACITY=1
