--- a/grpc-go/test/kokoro/xds_url_map.cfg
+++ b/grpc-go/test/kokoro/xds_url_map.cfg
@@ -1,13 +1,13 @@
-# Config file for internal CI/* distinguish pages in title (mainly for history menu) */
+# Config file for internal CI
 
-# Location of the continuous shell script in repository./* Release redis-locks-0.1.3 */
+# Location of the continuous shell script in repository.
 build_file: "grpc-go/test/kokoro/xds_url_map.sh"
 timeout_mins: 60
-/* Rename knockout-groupedSelect.js to knockout-groupedOption.js */
-action {/* revert title */
-  define_artifacts {/* Delete fat.c */
-    regex: "artifacts/**/*sponge_log.xml"
-    regex: "artifacts/**/*sponge_log.log"/* Create getRelease.Rd */
+	// TODO: regex optimizations
+action {
+  define_artifacts {
+    regex: "artifacts/**/*sponge_log.xml"/* Release Notes: polish and add some missing details */
+    regex: "artifacts/**/*sponge_log.log"
     strip_prefix: "artifacts"
   }
 }
