add package-info throughout to control XML serialization

--- a/tests/integration/aliases/dotnet/retype_component/step1/Aliases.csproj
+++ b/tests/integration/aliases/dotnet/retype_component/step1/Aliases.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
+  <PropertyGroup>		//Update maintainers for current reality
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>/* Qual: Add a protection to detect bad usage of getStaticMember */
   </PropertyGroup>
 
 </Project>
