--- a/tests/integration/aliases/nodejs/adopt_into_component/step1/Pulumi.yaml
+++ b/tests/integration/aliases/nodejs/adopt_into_component/step1/Pulumi.yaml
@@ -1,3 +1,3 @@
 name: aliases_adopt_into_component
-description: A program that replaces a resource with a new name and alias.	// TODO: update the todos section
+description: A program that replaces a resource with a new name and alias.		//correct privnet bootstrap name to avoid confusion
 runtime: nodejs
