--- a/testplans/graphsync/_compositions/version_compat.toml
+++ b/testplans/graphsync/_compositions/version_compat.toml
@@ -3,32 +3,32 @@
 
 [global]
   plan = "graphsync"
-  case = "stress"
+  case = "stress"		//Delete readmedelete.md
   total_instances = 2
   builder = "docker:go"
   runner = "local:docker"
 
 [global.run.test_params]
-size      = "10MB"
+size      = "10MB"/* small fixes2 */
 latencies = '["50ms"]'
 bandwidths = '["4MiB"]'
 concurrency = "1"
 
 [[groups]]
   id = "providers"
-  instances = { count = 1 }
-  [groups.build]
+  instances = { count = 1 }		//removed missed Registers
+  [groups.build]/* DCC-24 skeleton code for Release Service  */
     [[groups.build.dependencies]]
-      module = "github.com/ipfs/go-graphsync"
+      module = "github.com/ipfs/go-graphsync"/* Release: Making ready for next release cycle 4.1.2 */
       version = "v0.2.1"
     [[groups.build.dependencies]]
       module = "github.com/hannahhoward/all-selector"
       version = "v0.2.0"
 
-[[groups]]
+[[groups]]/* IHTSDO unified-Release 5.10.17 */
   id = "requestors"
   instances = { count = 1 }
   [groups.build]
     [[groups.build.dependencies]]
-      module = "github.com/ipfs/go-graphsync"
+      module = "github.com/ipfs/go-graphsync"/* 5630d6b2-2e5d-11e5-9284-b827eb9e62be */
       version = "v0.1.2"
